complier/CMMComplier/ast/token/Parse.java
/* Parse.java */
/* Generated By:JJTree&JavaCC: Do not edit this line. Parse.java */
public class Parse/*@bgen(jjtree)*/implements ParseTreeConstants, ParseConstants {/*@bgen(jjtree)*/
  protected JJTParseState jjtree = new JJTParseState();
    public static void main(String args[]) throws ParseException {
    Parse parser = new Parse(System.in);

    try {
        ASTstart n = parser.start();
        n.dump("");
        System.out.println("OK.");
    } catch (Exception e) {
    System.out.println("Error");
    System.out.println(e.getMessage());
    parser.ReInit(System.in);
    } catch (Error e) {
    System.out.println("Error");
    System.out.println(e.getMessage());

    }

    }

  final public ASTstart start() throws ParseException {/*@bgen(jjtree) start */
  ASTstart jjtn000 = new ASTstart(JJTSTART);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      program();
      jj_consume_token(END);
jjtree.closeNodeScope(jjtn000, true);
                    jjtc000 = false;
{if ("" != null) return jjtn000;}
    } catch (Throwable jjte000) {
if (jjtc000) {
        jjtree.clearNodeScope(jjtn000);
        jjtc000 = false;
      } else {
        jjtree.popNode();
      }
      if (jjte000 instanceof RuntimeException) {
        {if (true) throw (RuntimeException)jjte000;}
      }
      if (jjte000 instanceof ParseException) {
        {if (true) throw (ParseException)jjte000;}
      }
      {if (true) throw (Error)jjte000;}
    } finally {
if (jjtc000) {
        jjtree.closeNodeScope(jjtn000, true);
      }
    }
    throw new Error("Missing return statement in function");
  }

  final public void program() throws ParseException {/*@bgen(jjtree) program */
  ASTprogram jjtn000 = new ASTprogram(JJTPROGRAM);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      statement();
      statements();
    } catch (Throwable jjte000) {
if (jjtc000) {
        jjtree.clearNodeScope(jjtn000);
        jjtc000 = false;
      } else {
        jjtree.popNode();
      }
      if (jjte000 instanceof RuntimeException) {
        {if (true) throw (RuntimeException)jjte000;}
      }
      if (jjte000 instanceof ParseException) {
        {if (true) throw (ParseException)jjte000;}
      }
      {if (true) throw (Error)jjte000;}
    } finally {
if (jjtc000) {
        jjtree.closeNodeScope(jjtn000, true);
      }
    }
  }

  final public void statements() throws ParseException {/*@bgen(jjtree) statements */
  ASTstatements jjtn000 = new ASTstatements(JJTSTATEMENTS);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case BOOLEAN:
      case CHAR:
      case INT:
      case REAL:
      case WHILE:
      case IF:
      case WRITE:
      case READ:
      case ID:{
        program();
        break;
        }
      default:
        jj_la1[0] = jj_gen;
        ;
      }
    } catch (Throwable jjte000) {
if (jjtc000) {
        jjtree.clearNodeScope(jjtn000);
        jjtc000 = false;
      } else {
        jjtree.popNode();
      }
      if (jjte000 instanceof RuntimeException) {
        {if (true) throw (RuntimeException)jjte000;}
      }
      if (jjte000 instanceof ParseException) {
        {if (true) throw (ParseException)jjte000;}
      }
      {if (true) throw (Error)jjte000;}
    } finally {
if (jjtc000) {
        jjtree.closeNodeScope(jjtn000, true);
      }
    }
  }

  final public void statement() throws ParseException {/*@bgen(jjtree) statement */
  ASTstatement jjtn000 = new ASTstatement(JJTSTATEMENT);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case ID:{
        assignment();
        jj_consume_token(47);
        break;
        }
      case BOOLEAN:
      case CHAR:
      case INT:
      case REAL:{
        declaration();
        jj_consume_token(47);
        break;
        }
      case IF:{
        ifstatement();
        break;
        }
      case WHILE:{
        whilestatement();
        break;
        }
      case READ:{
        readstatement();
        jj_consume_token(47);
        break;
        }
      case WRITE:{
        writestatement();
        jj_consume_token(47);
        break;
        }
      default:
        jj_la1[1] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    } catch (Throwable jjte000) {
if (jjtc000) {
        jjtree.clearNodeScope(jjtn000);
        jjtc000 = false;
      } else {
        jjtree.popNode();
      }
      if (jjte000 instanceof RuntimeException) {
        {if (true) throw (RuntimeException)jjte000;}
      }
      if (jjte000 instanceof ParseException) {
        {if (true) throw (ParseException)jjte000;}
      }
      {if (true) throw (Error)jjte000;}
    } finally {
if (jjtc000) {
        jjtree.closeNodeScope(jjtn000, true);
      }
    }
  }

  final public void ifstatement() throws ParseException {/*@bgen(jjtree) ifstatement */
  ASTifstatement jjtn000 = new ASTifstatement(JJTIFSTATEMENT);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      jj_consume_token(IF);
      jj_consume_token(LC);
      condition();
      jj_consume_token(RC);
      jj_consume_token(LB);
      statements();
      jj_consume_token(RB);
      label_1:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case ELSE:{
          ;
          break;
          }
        default:
          jj_la1[2] = jj_gen;
          break label_1;
        }
        jj_consume_token(ELSE);
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case LB:{
          jj_consume_token(LB);
          statements();
          jj_consume_token(RB);
          break;
          }
        case BOOLEAN:
        case CHAR:
        case INT:
        case REAL:
        case WHILE:
        case IF:
        case WRITE:
        case READ:
        case ID:{
          statement();
          break;
          }
        default:
          jj_la1[3] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
      }
    } catch (Throwable jjte000) {
if (jjtc000) {
        jjtree.clearNodeScope(jjtn000);
        jjtc000 = false;
      } else {
        jjtree.popNode();
      }
      if (jjte000 instanceof RuntimeException) {
        {if (true) throw (RuntimeException)jjte000;}
      }
      if (jjte000 instanceof ParseException) {
        {if (true) throw (ParseException)jjte000;}
      }
      {if (true) throw (Error)jjte000;}
    } finally {
if (jjtc000) {
        jjtree.closeNodeScope(jjtn000, true);
      }
    }
  }

  final public void condition() throws ParseException {/*@bgen(jjtree) condition */
  ASTcondition jjtn000 = new ASTcondition(JJTCONDITION);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      expression();
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case GT:
      case LT:
      case EQ:
      case LE:
      case GE:
      case NE:
      case AND:
      case OR:{
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case EQ:{
          jj_consume_token(EQ);
ASTEQNode jjtn001 = new ASTEQNode(JJTEQNODE);
                        boolean jjtc001 = true;
                        jjtree.openNodeScope(jjtn001);
          try {
            expression();
          } catch (Throwable jjte001) {
if (jjtc001) {
                          jjtree.clearNodeScope(jjtn001);
                          jjtc001 = false;
                        } else {
                          jjtree.popNode();
                        }
                        if (jjte001 instanceof RuntimeException) {
                          {if (true) throw (RuntimeException)jjte001;}
                        }
                        if (jjte001 instanceof ParseException) {
                          {if (true) throw (ParseException)jjte001;}
                        }
                        {if (true) throw (Error)jjte001;}
          } finally {
if (jjtc001) {
                          jjtree.closeNodeScope(jjtn001,  2);
                        }
          }
          break;
          }
        case NE:{
          jj_consume_token(NE);
ASTNENode jjtn002 = new ASTNENode(JJTNENODE);
             boolean jjtc002 = true;
             jjtree.openNodeScope(jjtn002);
          try {
            expression();
          } catch (Throwable jjte002) {
if (jjtc002) {
               jjtree.clearNodeScope(jjtn002);
               jjtc002 = false;
             } else {
               jjtree.popNode();
             }
             if (jjte002 instanceof RuntimeException) {
               {if (true) throw (RuntimeException)jjte002;}
             }
             if (jjte002 instanceof ParseException) {
               {if (true) throw (ParseException)jjte002;}
             }
             {if (true) throw (Error)jjte002;}
          } finally {
if (jjtc002) {
               jjtree.closeNodeScope(jjtn002,  2);
             }
          }
          break;
          }
        case GT:{
          jj_consume_token(GT);
ASTGTNode jjtn003 = new ASTGTNode(JJTGTNODE);
             boolean jjtc003 = true;
             jjtree.openNodeScope(jjtn003);
          try {
            expression();
          } catch (Throwable jjte003) {
if (jjtc003) {
               jjtree.clearNodeScope(jjtn003);
               jjtc003 = false;
             } else {
               jjtree.popNode();
             }
             if (jjte003 instanceof RuntimeException) {
               {if (true) throw (RuntimeException)jjte003;}
             }
             if (jjte003 instanceof ParseException) {
               {if (true) throw (ParseException)jjte003;}
             }
             {if (true) throw (Error)jjte003;}
          } finally {
if (jjtc003) {
               jjtree.closeNodeScope(jjtn003,  2);
             }
          }
          break;
          }
        case LT:{
          jj_consume_token(LT);
ASTLTNode jjtn004 = new ASTLTNode(JJTLTNODE);
             boolean jjtc004 = true;
             jjtree.openNodeScope(jjtn004);
          try {
            expression();
          } catch (Throwable jjte004) {
if (jjtc004) {
               jjtree.clearNodeScope(jjtn004);
               jjtc004 = false;
             } else {
               jjtree.popNode();
             }
             if (jjte004 instanceof RuntimeException) {
               {if (true) throw (RuntimeException)jjte004;}
             }
             if (jjte004 instanceof ParseException) {
               {if (true) throw (ParseException)jjte004;}
             }
             {if (true) throw (Error)jjte004;}
          } finally {
if (jjtc004) {
               jjtree.closeNodeScope(jjtn004,  2);
             }
          }
          break;
          }
        case LE:{
          jj_consume_token(LE);
ASTLENode jjtn005 = new ASTLENode(JJTLENODE);
             boolean jjtc005 = true;
             jjtree.openNodeScope(jjtn005);
          try {
            expression();
          } catch (Throwable jjte005) {
if (jjtc005) {
               jjtree.clearNodeScope(jjtn005);
               jjtc005 = false;
             } else {
               jjtree.popNode();
             }
             if (jjte005 instanceof RuntimeException) {
               {if (true) throw (RuntimeException)jjte005;}
             }
             if (jjte005 instanceof ParseException) {
               {if (true) throw (ParseException)jjte005;}
             }
             {if (true) throw (Error)jjte005;}
          } finally {
if (jjtc005) {
               jjtree.closeNodeScope(jjtn005,  2);
             }
          }
          break;
          }
        case GE:{
          jj_consume_token(GE);
ASTGENode jjtn006 = new ASTGENode(JJTGENODE);
             boolean jjtc006 = true;
             jjtree.openNodeScope(jjtn006);
          try {
            expression();
          } catch (Throwable jjte006) {
if (jjtc006) {
               jjtree.clearNodeScope(jjtn006);
               jjtc006 = false;
             } else {
               jjtree.popNode();
             }
             if (jjte006 instanceof RuntimeException) {
               {if (true) throw (RuntimeException)jjte006;}
             }
             if (jjte006 instanceof ParseException) {
               {if (true) throw (ParseException)jjte006;}
             }
             {if (true) throw (Error)jjte006;}
          } finally {
if (jjtc006) {
               jjtree.closeNodeScope(jjtn006,  2);
             }
          }
          break;
          }
        case AND:{
          jj_consume_token(AND);
ASTANDNode jjtn007 = new ASTANDNode(JJTANDNODE);
              boolean jjtc007 = true;
              jjtree.openNodeScope(jjtn007);
          try {
            expression();
          } catch (Throwable jjte007) {
if (jjtc007) {
                jjtree.clearNodeScope(jjtn007);
                jjtc007 = false;
              } else {
                jjtree.popNode();
              }
              if (jjte007 instanceof RuntimeException) {
                {if (true) throw (RuntimeException)jjte007;}
              }
              if (jjte007 instanceof ParseException) {
                {if (true) throw (ParseException)jjte007;}
              }
              {if (true) throw (Error)jjte007;}
          } finally {
if (jjtc007) {
                jjtree.closeNodeScope(jjtn007,  2);
              }
          }
          break;
          }
        case OR:{
          jj_consume_token(OR);
ASTORNode jjtn008 = new ASTORNode(JJTORNODE);
             boolean jjtc008 = true;
             jjtree.openNodeScope(jjtn008);
          try {
            expression();
          } catch (Throwable jjte008) {
if (jjtc008) {
               jjtree.clearNodeScope(jjtn008);
               jjtc008 = false;
             } else {
               jjtree.popNode();
             }
             if (jjte008 instanceof RuntimeException) {
               {if (true) throw (RuntimeException)jjte008;}
             }
             if (jjte008 instanceof ParseException) {
               {if (true) throw (ParseException)jjte008;}
             }
             {if (true) throw (Error)jjte008;}
          } finally {
if (jjtc008) {
               jjtree.closeNodeScope(jjtn008,  2);
             }
          }
          break;
          }
        default:
          jj_la1[4] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
        break;
        }
      default:
        jj_la1[5] = jj_gen;
        ;
      }
    } catch (Throwable jjte000) {
if (jjtc000) {
        jjtree.clearNodeScope(jjtn000);
        jjtc000 = false;
      } else {
        jjtree.popNode();
      }
      if (jjte000 instanceof RuntimeException) {
        {if (true) throw (RuntimeException)jjte000;}
      }
      if (jjte000 instanceof ParseException) {
        {if (true) throw (ParseException)jjte000;}
      }
      {if (true) throw (Error)jjte000;}
    } finally {
if (jjtc000) {
        jjtree.closeNodeScope(jjtn000, true);
      }
    }
  }

  final public void expression() throws ParseException {/*@bgen(jjtree) expression */
  ASTexpression jjtn000 = new ASTexpression(JJTEXPRESSION);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      term();
      label_2:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case PLUS:
        case MINUS:{
          ;
          break;
          }
        default:
          jj_la1[6] = jj_gen;
          break label_2;
        }
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case PLUS:{
          jj_consume_token(PLUS);
ASTPLUSNode jjtn001 = new ASTPLUSNode(JJTPLUSNODE);
                        boolean jjtc001 = true;
                        jjtree.openNodeScope(jjtn001);
          try {
            term();
          } catch (Throwable jjte001) {
if (jjtc001) {
                          jjtree.clearNodeScope(jjtn001);
                          jjtc001 = false;
                        } else {
                          jjtree.popNode();
                        }
                        if (jjte001 instanceof RuntimeException) {
                          {if (true) throw (RuntimeException)jjte001;}
                        }
                        if (jjte001 instanceof ParseException) {
                          {if (true) throw (ParseException)jjte001;}
                        }
                        {if (true) throw (Error)jjte001;}
          } finally {
if (jjtc001) {
                          jjtree.closeNodeScope(jjtn001,  2);
                        }
          }
          break;
          }
        case MINUS:{
          jj_consume_token(MINUS);
ASTMINUSNode jjtn002 = new ASTMINUSNode(JJTMINUSNODE);
                    boolean jjtc002 = true;
                    jjtree.openNodeScope(jjtn002);
          try {
            term();
          } catch (Throwable jjte002) {
if (jjtc002) {
                      jjtree.clearNodeScope(jjtn002);
                      jjtc002 = false;
                    } else {
                      jjtree.popNode();
                    }
                    if (jjte002 instanceof RuntimeException) {
                      {if (true) throw (RuntimeException)jjte002;}
                    }
                    if (jjte002 instanceof ParseException) {
                      {if (true) throw (ParseException)jjte002;}
                    }
                    {if (true) throw (Error)jjte002;}
          } finally {
if (jjtc002) {
                      jjtree.closeNodeScope(jjtn002,  2);
                    }
          }
          break;
          }
        default:
          jj_la1[7] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
      }
    } catch (Throwable jjte000) {
if (jjtc000) {
            jjtree.clearNodeScope(jjtn000);
            jjtc000 = false;
          } else {
            jjtree.popNode();
          }
          if (jjte000 instanceof RuntimeException) {
            {if (true) throw (RuntimeException)jjte000;}
          }
          if (jjte000 instanceof ParseException) {
            {if (true) throw (ParseException)jjte000;}
          }
          {if (true) throw (Error)jjte000;}
    } finally {
if (jjtc000) {
            jjtree.closeNodeScope(jjtn000, true);
          }
    }
  }

  final public void term() throws ParseException {/*@bgen(jjtree) term */
  ASTterm jjtn000 = new ASTterm(JJTTERM);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case INTEGER:
      case STRING:
      case DOUBLE:
      case TRUE:
      case FALSE:
      case LC:
      case ID:{
        factor();
        break;
        }
      default:
        jj_la1[8] = jj_gen;
        ;
      }
      label_3:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case MULTIPLY:
        case DIVIDE:
        case MOD:{
          ;
          break;
          }
        default:
          jj_la1[9] = jj_gen;
          break label_3;
        }
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case MULTIPLY:{
          jj_consume_token(MULTIPLY);
ASTMULTINode jjtn001 = new ASTMULTINode(JJTMULTINODE);
                                 boolean jjtc001 = true;
                                 jjtree.openNodeScope(jjtn001);
          try {
            factor();
          } catch (Throwable jjte001) {
if (jjtc001) {
                                   jjtree.clearNodeScope(jjtn001);
                                   jjtc001 = false;
                                 } else {
                                   jjtree.popNode();
                                 }
                                 if (jjte001 instanceof RuntimeException) {
                                   {if (true) throw (RuntimeException)jjte001;}
                                 }
                                 if (jjte001 instanceof ParseException) {
                                   {if (true) throw (ParseException)jjte001;}
                                 }
                                 {if (true) throw (Error)jjte001;}
          } finally {
if (jjtc001) {
                                   jjtree.closeNodeScope(jjtn001,  2);
                                 }
          }
          break;
          }
        case DIVIDE:{
          jj_consume_token(DIVIDE);
ASTDIVNode jjtn002 = new ASTDIVNode(JJTDIVNODE);
                     boolean jjtc002 = true;
                     jjtree.openNodeScope(jjtn002);
          try {
            factor();
          } catch (Throwable jjte002) {
if (jjtc002) {
                       jjtree.clearNodeScope(jjtn002);
                       jjtc002 = false;
                     } else {
                       jjtree.popNode();
                     }
                     if (jjte002 instanceof RuntimeException) {
                       {if (true) throw (RuntimeException)jjte002;}
                     }
                     if (jjte002 instanceof ParseException) {
                       {if (true) throw (ParseException)jjte002;}
                     }
                     {if (true) throw (Error)jjte002;}
          } finally {
if (jjtc002) {
                       jjtree.closeNodeScope(jjtn002,  2);
                     }
          }
          break;
          }
        case MOD:{
          jj_consume_token(MOD);
ASTMODNode jjtn003 = new ASTMODNode(JJTMODNODE);
                boolean jjtc003 = true;
                jjtree.openNodeScope(jjtn003);
          try {
            factor();
          } catch (Throwable jjte003) {
if (jjtc003) {
                  jjtree.clearNodeScope(jjtn003);
                  jjtc003 = false;
                } else {
                  jjtree.popNode();
                }
                if (jjte003 instanceof RuntimeException) {
                  {if (true) throw (RuntimeException)jjte003;}
                }
                if (jjte003 instanceof ParseException) {
                  {if (true) throw (ParseException)jjte003;}
                }
                {if (true) throw (Error)jjte003;}
          } finally {
if (jjtc003) {
                  jjtree.closeNodeScope(jjtn003,  2);
                }
          }
          break;
          }
        default:
          jj_la1[10] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
      }
    } catch (Throwable jjte000) {
if (jjtc000) {
            jjtree.clearNodeScope(jjtn000);
            jjtc000 = false;
          } else {
            jjtree.popNode();
          }
          if (jjte000 instanceof RuntimeException) {
            {if (true) throw (RuntimeException)jjte000;}
          }
          if (jjte000 instanceof ParseException) {
            {if (true) throw (ParseException)jjte000;}
          }
          {if (true) throw (Error)jjte000;}
    } finally {
if (jjtc000) {
            jjtree.closeNodeScope(jjtn000, true);
          }
    }
  }

  final public void factor() throws ParseException {/*@bgen(jjtree) factor */
  ASTfactor jjtn000 = new ASTfactor(JJTFACTOR);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case ID:{
        id();
        break;
        }
      case LC:{
        jj_consume_token(LC);
        expression();
        jj_consume_token(RC);
        break;
        }
      case INTEGER:{
        integer();
        break;
        }
      case DOUBLE:{
        real();
        break;
        }
      case STRING:{
        string();
        break;
        }
      case TRUE:
      case FALSE:{
        bool();
        break;
        }
      default:
        jj_la1[11] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    } catch (Throwable jjte000) {
if (jjtc000) {
            jjtree.clearNodeScope(jjtn000);
            jjtc000 = false;
          } else {
            jjtree.popNode();
          }
          if (jjte000 instanceof RuntimeException) {
            {if (true) throw (RuntimeException)jjte000;}
          }
          if (jjte000 instanceof ParseException) {
            {if (true) throw (ParseException)jjte000;}
          }
          {if (true) throw (Error)jjte000;}
    } finally {
if (jjtc000) {
            jjtree.closeNodeScope(jjtn000, true);
          }
    }
  }

  final public void id() throws ParseException {/*@bgen(jjtree) id */
           ASTid jjtn000 = new ASTid(JJTID);
           boolean jjtc000 = true;
           jjtree.openNodeScope(jjtn000);Token t;
    try {
      t = jj_consume_token(ID);
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case LM:{
        jj_consume_token(LM);
        expression();
        jj_consume_token(RM);
        break;
        }
      default:
        jj_la1[12] = jj_gen;
        ;
      }
jjtree.closeNodeScope(jjtn000, true);
                                      jjtc000 = false;
jjtn000.setName(t.image);
    } catch (Throwable jjte000) {
if (jjtc000) {
        jjtree.clearNodeScope(jjtn000);
        jjtc000 = false;
      } else {
        jjtree.popNode();
      }
      if (jjte000 instanceof RuntimeException) {
        {if (true) throw (RuntimeException)jjte000;}
      }
      if (jjte000 instanceof ParseException) {
        {if (true) throw (ParseException)jjte000;}
      }
      {if (true) throw (Error)jjte000;}
    } finally {
if (jjtc000) {
        jjtree.closeNodeScope(jjtn000, true);
      }
    }
  }

  final public void integer() throws ParseException {/*@bgen(jjtree) integer */
                ASTinteger jjtn000 = new ASTinteger(JJTINTEGER);
                boolean jjtc000 = true;
                jjtree.openNodeScope(jjtn000);Token t;
    try {
      t = jj_consume_token(INTEGER);
jjtree.closeNodeScope(jjtn000, true);
                jjtc000 = false;
jjtn000.setName(t.image);
    } finally {
if (jjtc000) {
    jjtree.closeNodeScope(jjtn000, true);
  }
    }
  }

  final public void string() throws ParseException {/*@bgen(jjtree) string */
               ASTstring jjtn000 = new ASTstring(JJTSTRING);
               boolean jjtc000 = true;
               jjtree.openNodeScope(jjtn000);Token t;
    try {
      t = jj_consume_token(STRING);
jjtree.closeNodeScope(jjtn000, true);
               jjtc000 = false;
jjtn000.setName(t.image);
    } finally {
if (jjtc000) {
    jjtree.closeNodeScope(jjtn000, true);
  }
    }
  }

  final public void real() throws ParseException {/*@bgen(jjtree) real */
             ASTreal jjtn000 = new ASTreal(JJTREAL);
             boolean jjtc000 = true;
             jjtree.openNodeScope(jjtn000);Token t;
    try {
      t = jj_consume_token(DOUBLE);
jjtree.closeNodeScope(jjtn000, true);
               jjtc000 = false;
jjtn000.setName(t.image);
    } finally {
if (jjtc000) {
    jjtree.closeNodeScope(jjtn000, true);
  }
    }
  }

  final public void bool() throws ParseException {/*@bgen(jjtree) bool */
             ASTbool jjtn000 = new ASTbool(JJTBOOL);
             boolean jjtc000 = true;
             jjtree.openNodeScope(jjtn000);Token t;
    try {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case TRUE:{
        t = jj_consume_token(TRUE);
jjtree.closeNodeScope(jjtn000, true);
             jjtc000 = false;
jjtn000.setName(t.image);
        break;
        }
      case FALSE:{
        t = jj_consume_token(FALSE);
jjtree.closeNodeScope(jjtn000, true);
               jjtc000 = false;
jjtn000.setName(t.image);
        break;
        }
      default:
        jj_la1[13] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    } finally {
if (jjtc000) {
    jjtree.closeNodeScope(jjtn000, true);
  }
    }
  }

  final public void whilestatement() throws ParseException {/*@bgen(jjtree) whilestatement */
  ASTwhilestatement jjtn000 = new ASTwhilestatement(JJTWHILESTATEMENT);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      jj_consume_token(WHILE);
      jj_consume_token(LC);
      condition();
      jj_consume_token(RC);
      jj_consume_token(LB);
      statements();
      jj_consume_token(RB);
    } catch (Throwable jjte000) {
if (jjtc000) {
        jjtree.clearNodeScope(jjtn000);
        jjtc000 = false;
      } else {
        jjtree.popNode();
      }
      if (jjte000 instanceof RuntimeException) {
        {if (true) throw (RuntimeException)jjte000;}
      }
      if (jjte000 instanceof ParseException) {
        {if (true) throw (ParseException)jjte000;}
      }
      {if (true) throw (Error)jjte000;}
    } finally {
if (jjtc000) {
        jjtree.closeNodeScope(jjtn000, true);
      }
    }
  }

  final public void declaration() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case INT:{
      intDec();
      break;
      }
    case REAL:{
      realDec();
      break;
      }
    case BOOLEAN:{
      boolDec();
      break;
      }
    case CHAR:{
      charDec();
      break;
      }
    default:
      jj_la1[14] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }
